Changes for 1.0beta9:

 - fixed addition of host triggers into IT Service tree (Alexei)
 - support of '(' and ')' in item keys (Alexei)
 - fixed dark blue color for user-defined chart (Alexei)
 - removed DOS style EOL from RedHat startup scripts (Alexei)
 - IT service to be hard-linked when added (Alexei)
 - fixed calculate_service_availability() (Alexei)
 - added report3.php (Alexei)
 - color statuses in media.php (Alexei)
 - fixed data.sql (Alexei)

Changes for 1.0beta8:

 - very basic support for SNMP trapping (Alexei)
 - added misc/snmptrap/snmptrap.sh (Alexei)
 - group selection for Item configuration form (Alexei)
 - added support for SLA level in IT Services (Alexei)
 - added fields services.showsla and services.goodsla (Alexei)
 - added field items.snmp_port (Alexei)
 - user-defined port number for SNMP requests (Alexei)
 - fixed SQL errors when adding host to IT Services (Alexei)
 - added chart_sla.php (Alexei)
 - fixed incorrect handling of timeouts when sendign emails
 (Alexei)
 - fixed selection of recipient in trigger actions (Alexei)
 - fixed Plain Text values (Alexei)
 - fixed improper handling of special characters i.e. '\/" (Alexei)
 - fixed Last100 and Prev100 for both Alarms and Alerts (Alexei)
 - fixed "STATUS OF ZABBIX". Command was changed to 'ps aux' (Alexei)
 - personalisation (remember default port number for hosts) (Alexei)
 - added table 'profiles' (Alexei)
 - assured uniqueness of host names (Alexei)
 - added upgrades/dbpatches/1.0beta7_to_1.0beta8/ with patches (Alexei)
 - mass update for triggers (activate, deactivate, delete) (Alexei)
 - all sendto() and recvfrom() were changed to write() and read() in function
 send_mail() (Alexei)
 - fixed bug in host addition procedure when template host is used (Alexei) 
 - different colors for different status of items, triggers, users
 (Alexei)

 - WIN32 agent. Added support for multiple servers (Victor)
 - WIN32 agent. Changes in communication protocol: on errors now returned