@@ -18,7 +18,6 @@ suckerd and agentd)
 
 BUGS:
 
- - BUG. alter table services modify goodsla double(2,2) default '99.00' not null;
  - BUG. Inconsistency of units (bytes, kB) for memories and swap space
  - graphs and maps are not displayed properly sometimes
  - BUG. Agent return unsupported in case if UserParameter ends by timeout.
