@@ -1,0 +1,1 @@
+alter table services modify goodsla float8 default '99.9' not null;
